--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,15 @@ set(PERMISSIONS_DEFAULT
     GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
 
-
-install(FILES ${CMAKE_SOURCE_DIR}/templates/*
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/templates/
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/templates/
 	PERMISSIONS ${PERMISSIONS_DEFAULT})
 
-install(FILES ${CMAKE_SOURCE_DIR}/cmake_modules/*
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_modules/
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/
 	PERMISSIONS ${PERMISSIONS_DEFAULT})
 
-install(FILES ${CMAKE_SOURCE_DIR}/cmake_macros/*
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_macros/
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/
 	PERMISSIONS ${PERMISSIONS_DEFAULT})
 
