--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,13 @@ cmake_minimum_required(VERSION 2.6)
 
 project(esrocos_config)
 
-set(PERMISSIONS_DEFAULT
-    OWNER_WRITE OWNER_READ OWNER_EXECUTE
-    GROUP_READ GROUP_EXECUTE
-    WORLD_READ WORLD_EXECUTE)
-
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/templates/
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/templates/
-	PERMISSIONS ${PERMISSIONS_DEFAULT})
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/templates/)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_modules/
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/
-	PERMISSIONS ${PERMISSIONS_DEFAULT})
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_macros/
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/
-	PERMISSIONS ${PERMISSIONS_DEFAULT})
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/)
 
 message(STATUS "installed tools")
