--- a/templates/CMakeLists.txt.in
+++ b/templates/CMakeLists.txt.in
@@ -25,9 +25,29 @@ project(@PROJECT@)
 
 include($ENV{ESROCOS_CMAKE})
 
-#uncomment if you want to add dependencies for the build process
+
+########### FOR INTEGRATION PROJECTS ##############
+
+#uncomment if you want to add dependencies for the build process (only required in integration projects)
 #esrocos_add_dependency("DEPENDENCY_NAME")
 
 #needs to be included even if there are no dependencies
 esrocos_install_dependency_info()
+
+
+########### FOR COMPONENT PROJECTS ################
+
+#uncomment if you want to export a function
+#esrocos_export_function("example" "tutorial/example_dir")
+
+#uncomment to export PKG-CONFIG-file
+#esrocos_export_pkg-config_info( VERSION 1.0
+#                                DESCRIPTION "none"
+#                                REQUIRES ""
+#                                LIBS ""
+#                                STATIC_LIBS "" 
+#                                C_FLAGS ""
+#                              ) 
+
+
 
