all: group in modules and install in share/esrocos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,17 @@
 cmake_minimum_required(VERSION 2.6)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/modules")
+include(${CMAKE_CURRENT_SOURCE_DIR}/modules/esrocos.cmake)
 
-project(esrocos_config)
+configure_file(modules/esrocos-config.cmake.in esrocos-config.cmake @ONLY)
+install(FILES
+	modules/FindCUnit.cmake
+	modules/FindGcov.cmake
+	modules/FindLcov.cmake
+	modules/Findcodecov.cmake
+	modules/esrocos.cmake
+	${CMAKE_CURRENT_BINARY_DIR}/esrocos-config.cmake
+	DESTINATION share/esrocos/cmake)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/templates/
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/templates/)
 
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_modules/
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_modules/)
-
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_macros/
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_macros/)
-
-message(STATUS "installed tools")
