--- a/templates/CMakeLists.txt.in
+++ b/templates/CMakeLists.txt.in
@@ -31,7 +31,7 @@ esrocos_init()
 ########### FOR INTEGRATION PROJECTS ##############
 
 #uncomment if you want to add dependencies for the build process (only required in integration projects)
-#esrocos_add_dependency("DEPENDENCY_NAME")
+#esrocos_add_dependency(opencv)
 
 #uncomment if you want your project to be build via taste build-script
 #esrocos_build_project()
@@ -42,13 +42,10 @@ esrocos_init()
 #esrocos_export_function("example" "tutorial/example_dir")
 
 #uncomment to export PKG-CONFIG-file
-#esrocos_export_pkg-config_info( VERSION 1.0
-#                                DESCRIPTION "none"
-#                                REQUIRES ""
-#                                LIBS ""
-#                                STATIC_LIBS "" 
-#                                C_FLAGS ""
-#                              ) 
-
-
-
+#esrocos_export_pkgconfig( VERSION 1.0
+#                          DESCRIPTION "none"
+#                          REQUIRES ""
+#                          LIBS ""
+#                          STATIC_LIBS "" 
+#                          CFLAGS ""
+# ) 
