--- a/templates/CMakeLists.txt.in
+++ b/templates/CMakeLists.txt.in
@@ -31,10 +31,8 @@ esrocos_init()
 ########### FOR INTEGRATION PROJECTS ##############
 
 #uncomment if you want to add dependencies for the build process (only required in integration projects)
-#esrocos_add_dependency(opencv)
-
-#uncomment if you want your project to be build via taste build-script
-#esrocos_build_project()
+#esrocos_add_dependency(PARTITION <Name Of Partition>
+#                       MODULES   <PKG-Config findable module>[,secondmodule,thirdmodule...])
 
 ########### FOR COMPONENT PROJECTS ################
 
@@ -42,10 +40,10 @@ esrocos_init()
 #esrocos_export_function("example" "tutorial/example_dir")
 
 #uncomment to export PKG-CONFIG-file
-#esrocos_export_pkgconfig( VERSION 1.0
-#                          DESCRIPTION "none"
-#                          REQUIRES ""
-#                          LIBS ""
-#                          STATIC_LIBS "" 
-#                          CFLAGS ""
-# ) 
+#esrocos_export_pkg-config_info( VERSION 1.0
+#                                DESCRIPTION "none"
+#                                REQUIRES ""
+#                                LIBS ""
+#                                STATIC_LIBS "" 
+#                                C_FLAGS ""
+#                              ) 
