--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,10 @@ install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_modules/
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_macros/
 	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_macros/)
 
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_toolchains/
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake_toolchains/)
+
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/autoproj/
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/autoproj/)
+
 message(STATUS "installed tools")
